# TinyAgents

./: .gitignore  CMakeLists.txt  Constants.h  LICENSE  World.cpp  World.h  main.cpp  utils.cpp  utils.h
Model/: Entity.cpp  Entity.h  MyTexture.cpp  MyTexture.h  Pawn.cpp  Pawn.h  Sheep.cpp  Sheep.h  Tileset.cpp  Tileset.h
